force-app/main/default/objects/Management_System__c/Management_System__c.object-meta.xml
<CustomObject>
    <label>Management System</label>
    <nameField>
        <label>Management System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Management Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>