force-app/main/default/objects/Management_System__c/fields/Active_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Active_Partnership__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is an active business partnership.</inlineHelpText>
    <label>Active Partnership</label>
    <type>Checkbox</type>
</CustomField>