force-app/main/default/objects/Management_System__c/fields/AKA_1__c.field-meta.xml
<CustomField>
    <fullName>AKA_1__c</fullName>
    <label>AKA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>