force-app/main/default/objects/Management_System__c/fields/AKA_2__c.field-meta.xml
<CustomField>
    <fullName>AKA_2__c</fullName>
    <label>AKA 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>