force-app/main/default/objects/Management_System__c/fields/Analytics__c.field-meta.xml
<CustomField>
    <fullName>Analytics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analytics</label>
    <type>Checkbox</type>
</CustomField>