force-app/main/default/objects/Management_System__c/fields/Analytics_Supported_Version__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Supported_Version__c</fullName>
    <label>Analytics Supported Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>