force-app/main/default/objects/Management_System__c/fields/Appointment_Location__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Location</label>
    <type>Checkbox</type>
</CustomField>