force-app/main/default/objects/Management_System__c/fields/Appointment_Provider__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Provider</label>
    <type>Checkbox</type>
</CustomField>