force-app/main/default/objects/Management_System__c/fields/Appointment_Provider_Icon__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Provider_Icon__c</fullName>
    <formula>IF(Appointment_Provider__c = TRUE, IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;YES&quot;), IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;NO&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Provider</label>
    <type>Text</type>
</CustomField>