force-app/main/default/objects/Management_System__c/fields/ASAP__c.field-meta.xml
<CustomField>
    <fullName>ASAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waitlist (ASAP)</label>
    <type>Checkbox</type>
</CustomField>