force-app/main/default/objects/Management_System__c/fields/ASAP_Support_Version__c.field-meta.xml
<CustomField>
    <fullName>ASAP_Support_Version__c</fullName>
    <label>ASAP Support Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>