force-app/main/default/objects/Management_System__c/fields/BD_Overview__c.field-meta.xml
<CustomField>
    <fullName>BD_Overview__c</fullName>
    <inlineHelpText>A brief overview provided by Business Development</inlineHelpText>
    <label>BD Overview</label>
    <type>TextArea</type>
</CustomField>