force-app/main/default/objects/Management_System__c/fields/Birthday_Messages__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Messages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Birthday Messages</label>
    <type>Checkbox</type>
</CustomField>