force-app/main/default/objects/Management_System__c/fields/Business_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Business_Relationship__c</fullName>
    <label>Business Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner (Contract)</fullName>
            </value>
            <value>
                <fullName>Technical Partnership (BAA)</fullName>
            </value>
            <value>
                <fullName>Technical Cooperation</fullName>
            </value>
            <value>
                <fullName>General Cooperation</fullName>
            </value>
            <value>
                <fullName>No Cooperation</fullName>
            </value>
            <value>
                <fullName>No Involvement</fullName>
                <default>true</default>
                <label>No Involvement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>