force-app/main/default/objects/Management_System__c/fields/Criteria_Based_Groups__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Based_Groups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criteria-Based Groups</label>
    <type>Checkbox</type>
</CustomField>