force-app/main/default/objects/Management_System__c/fields/Criteria_Based_Groups_Icon__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Based_Groups_Icon__c</fullName>
    <formula>IF(Criteria_Based_Groups__c = TRUE, IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;YES&quot;), IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;NO&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Criteria-Based Groups</label>
    <type>Text</type>
</CustomField>