force-app/main/default/objects/Management_System__c/fields/Date_Supported__c.field-meta.xml
<CustomField>
    <fullName>Date_Supported__c</fullName>
    <description>Updated the last time the PM status was changed</description>
    <inlineHelpText>When was this status changed.</inlineHelpText>
    <label>Date SYNC Status Changed</label>
    <type>Date</type>
</CustomField>