force-app/main/default/objects/Management_System__c/fields/DB_Type__c.field-meta.xml
<CustomField>
    <fullName>DB_Type__c</fullName>
    <label>DB Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>API/SOAP</fullName>
            </value>
            <value>
                <fullName>Automated Export</fullName>
            </value>
            <value>
                <fullName>Manual Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>