force-app/main/default/objects/Management_System__c/fields/Do_Not_Use_Management_System_Name__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Use_Management_System_Name__c</fullName>
    <label>Do Not Use - Management System Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>