force-app/main/default/objects/Management_System__c/fields/Eyewear_Location__c.field-meta.xml
<CustomField>
    <fullName>Eyewear_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eyewear Location</label>
    <type>Checkbox</type>
</CustomField>