force-app/main/default/objects/Management_System__c/fields/Eyewear_Supported_Version__c.field-meta.xml
<CustomField>
    <fullName>Eyewear_Supported_Version__c</fullName>
    <label>Eyewear Supported Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>