force-app/main/default/objects/Management_System__c/fields/First_Appointment__c.field-meta.xml
<CustomField>
    <fullName>First_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Appointment</label>
    <type>Checkbox</type>
</CustomField>