force-app/main/default/objects/Management_System__c/fields/Group_by_Appointment_Kept__c.field-meta.xml
<CustomField>
    <fullName>Group_by_Appointment_Kept__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sub-item under Criteria Based Groups</description>
    <label>Group by Appointment Kept</label>
    <type>Checkbox</type>
</CustomField>