force-app/main/default/objects/Management_System__c/fields/Group_by_ICD_9__c.field-meta.xml
<CustomField>
    <fullName>Group_by_ICD_9__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sub-item under Criteria Based Groups</description>
    <label>Group by ICD-9</label>
    <type>Checkbox</type>
</CustomField>