force-app/main/default/objects/Management_System__c/fields/Group_By_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Group_By_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group By Insurance</label>
    <type>Checkbox</type>
</CustomField>