force-app/main/default/objects/Management_System__c/fields/Group_By_Insurance_Icon__c.field-meta.xml
<CustomField>
    <fullName>Group_By_Insurance_Icon__c</fullName>
    <formula>IF(Group_By_Insurance__c = TRUE, IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;YES&quot;), IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;NO&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group By Insurance</label>
    <type>Text</type>
</CustomField>