force-app/main/default/objects/Management_System__c/fields/HOH__c.field-meta.xml
<CustomField>
    <fullName>HOH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOH</label>
    <type>Checkbox</type>
</CustomField>