force-app/main/default/objects/Management_System__c/fields/Industries__c.field-meta.xml
<CustomField>
    <fullName>Industries__c</fullName>
    <label>Industries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Non-Medical</fullName>
            </value>
            <value>
                <fullName>Physical Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>