force-app/main/default/objects/Management_System__c/fields/Insurance_Supported_Version__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Supported_Version__c</fullName>
    <label>Insurance Supported Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>