force-app/main/default/objects/Management_System__c/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <label>Integration Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>