force-app/main/default/objects/Management_System__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undetermined</fullName>
            </value>
            <value>
                <fullName>Tier 1 - Tech Only</fullName>
            </value>
            <value>
                <fullName>Tier 2 - Marketing &amp; Lead Generation</fullName>
            </value>
            <value>
                <fullName>Tier 3 - Preferred Vendor Status</fullName>
            </value>
            <value>
                <fullName>Tier 4 - High Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>