force-app/main/default/objects/Management_System__c/fields/Last_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Appointment_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Appointment Date</label>
    <type>Checkbox</type>
</CustomField>