force-app/main/default/objects/Management_System__c/fields/Last_Appointment_Date_Icon__c.field-meta.xml
<CustomField>
    <fullName>Last_Appointment_Date_Icon__c</fullName>
    <formula>IF(Last_Appointment_Date__c = TRUE, IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;YES&quot;), IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;NO&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Appointment Date</label>
    <type>Text</type>
</CustomField>