force-app/main/default/objects/Management_System__c/fields/Ledgers__c.field-meta.xml
<CustomField>
    <fullName>Ledgers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Reminders (Ledgers)</label>
    <type>Checkbox</type>
</CustomField>