force-app/main/default/objects/Management_System__c/fields/Ledgers_Support_Version__c.field-meta.xml
<CustomField>
    <fullName>Ledgers_Support_Version__c</fullName>
    <label>Ledgers Support Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>