force-app/main/default/objects/Management_System__c/fields/Limelight__c.field-meta.xml
<CustomField>
    <fullName>Limelight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SR Schedule</label>
    <type>Checkbox</type>
</CustomField>