force-app/main/default/objects/Management_System__c/fields/Limelight_Available__c.field-meta.xml
<CustomField>
    <fullName>Limelight_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SR Schedule Available</label>
    <type>Checkbox</type>
</CustomField>