force-app/main/default/objects/Management_System__c/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locations</label>
    <type>Checkbox</type>
</CustomField>