force-app/main/default/objects/Management_System__c/fields/Locations_Support_Version__c.field-meta.xml
<CustomField>
    <fullName>Locations_Support_Version__c</fullName>
    <label>Locations Support Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>