force-app/main/default/objects/Management_System__c/fields/Maps__c.field-meta.xml
<CustomField>
    <fullName>Maps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maps</label>
    <type>Checkbox</type>
</CustomField>