force-app/main/default/objects/Management_System__c/fields/Maps_Address__c.field-meta.xml
<CustomField>
    <fullName>Maps_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maps Address</label>
    <type>Checkbox</type>
</CustomField>