force-app/main/default/objects/Management_System__c/fields/Maps_First_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Maps_First_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maps First Appointment</label>
    <type>Checkbox</type>
</CustomField>