force-app/main/default/objects/Management_System__c/fields/Maps_First_Appointment_Icon__c.field-meta.xml
<CustomField>
    <fullName>Maps_First_Appointment_Icon__c</fullName>
    <formula>IF(Maps_First_Appointment__c = TRUE, IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;YES&quot;), IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;NO&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maps First Appointment</label>
    <type>Text</type>
</CustomField>