force-app/main/default/objects/Management_System__c/fields/Maps_Supported_Version__c.field-meta.xml
<CustomField>
    <fullName>Maps_Supported_Version__c</fullName>
    <label>Maps Supported Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>