force-app/main/default/objects/Management_System__c/fields/Missed_Appointment_Messages__c.field-meta.xml
<CustomField>
    <fullName>Missed_Appointment_Messages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missed Appointment Messages</label>
    <type>Checkbox</type>
</CustomField>