force-app/main/default/objects/Management_System__c/fields/Missed_Appointment_Messages_Icon__c.field-meta.xml
<CustomField>
    <fullName>Missed_Appointment_Messages_Icon__c</fullName>
    <formula>IF(Missed_Appointment_Messages__c = TRUE, IMAGE(&quot;/img/permissions_confirm16.gif&quot;, &quot;YES&quot;), IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;NO&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missed Appointment Messages</label>
    <type>Text</type>
</CustomField>