force-app/main/default/objects/Management_System__c/fields/Newsletter_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Campaigns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Newsletter Campaigns</label>
    <type>Checkbox</type>
</CustomField>