force-app/main/default/objects/Management_System__c/fields/Newsletter_Campaigns_Supported_Version__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Campaigns_Supported_Version__c</fullName>
    <label>Newsletter Campaigns Supported Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>