force-app/main/default/objects/Management_System__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner, PM/EHR Partner</value>
        </filterItems>
        <infoMessage>Only Partner and PM/EHR Partner record types should be linked.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Management Systems</relationshipLabel>
    <relationshipName>Management_Systems</relationshipName>
    <type>Lookup</type>
</CustomField>