force-app/main/default/objects/Management_System__c/fields/Patient_Location__c.field-meta.xml
<CustomField>
    <fullName>Patient_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Location</label>
    <type>Checkbox</type>
</CustomField>