force-app/main/default/objects/Management_System__c/fields/Patient_Provider__c.field-meta.xml
<CustomField>
    <fullName>Patient_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Provider</label>
    <type>Checkbox</type>
</CustomField>