force-app/main/default/objects/Management_System__c/fields/Practice_Management_Install_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Practice_Management_Install_Requirements__c</fullName>
    <description>List of requirements necessary for a customer to complete prior to sync installation.  Mirrored on related Accounts</description>
    <inlineHelpText>List of requirements necessary for a customer to complete prior to sync installation.  Mirrored on related Accounts</inlineHelpText>
    <label>Practice Management Install Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>