force-app/main/default/objects/Management_System__c/fields/Procedure_History__c.field-meta.xml
<CustomField>
    <fullName>Procedure_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procedure History</label>
    <type>Checkbox</type>
</CustomField>