force-app/main/default/objects/Management_System__c/fields/Procedure_History_Support_Version__c.field-meta.xml
<CustomField>
    <fullName>Procedure_History_Support_Version__c</fullName>
    <label>Procedure History Support Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>