force-app/main/default/objects/Management_System__c/fields/Production_ID__c.field-meta.xml
<CustomField>
    <fullName>Production_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Production ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>