force-app/main/default/objects/Management_System__c/fields/Providers__c.field-meta.xml
<CustomField>
    <fullName>Providers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Providers</label>
    <type>Checkbox</type>
</CustomField>