force-app/main/default/objects/Management_System__c/fields/Providers_Support_Version__c.field-meta.xml
<CustomField>
    <fullName>Providers_Support_Version__c</fullName>
    <label>Providers Support Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>