force-app/main/default/objects/Management_System__c/fields/Recall_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Recall_Due_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recall Due Date</label>
    <type>Checkbox</type>
</CustomField>